# PyHuskarUI

./: .gitignore  README-zh_CN.md  README.md  pyproject.toml  update_qrc.py  update_shader.py
agent/: README-zh_CN.md  (+1 more)
gallery/: customtheme.py  images.qrc  logger.py  main.py  pyproject.toml  qml.qrc  qml_rc.py  shaders.qrc  shaders_rc.py  themeswitchitem.py
gallery/images/: huskarui_icon.icns
gallery/qml/: Gallery.qml  Global.qml
gallery/qml/Controls/: CodeBox.qml  CodeRunner.qml  CommitHistory.qml  ThemeToken.qml  UpdateDesc.qml
gallery/qml/Examples/DataDisplay/: ExpAnimatedImage.qml  ExpAvatar.qml  ExpBadge.qml  ExpCard.qml  ExpCarousel.qml  ExpCheckerBoard.qml  ExpCollapse.qml  ExpEmpty.qml  ExpImage.qml  ExpImagePreview.qml  ExpQrCode.qml  ExpSegmented.qml  ExpTabView.qml  ExpTableView.qml  ExpTag.qml  ExpTimeline.qml  ExpToolTip.qml  ExpTourFocus.qml  ExpTourStep.qml  ExpTreeView.qml
gallery/qml/Examples/DataEntry/: ExpAutoComplete.qml  ExpCheckBox.qml  ExpColorPicker.qml  ExpColorPickerPanel.qml  ExpDateTimePicker.qml  ExpDateTimePickerPanel.qml  ExpInput.qml  ExpInputInteger.qml  ExpInputNumber.qml  ExpMultiSelect.qml  ExpOTPInput.qml  ExpRadio.qml  ExpRadioBlock.qml  ExpRate.qml  ExpSelect.qml  ExpSlider.qml  ExpSwitch.qml  ExpTextArea.qml
gallery/qml/Examples/Effect/: ExpAcrylic.qml  ExpShadow.qml  ExpSwitchEffect.qml
gallery/qml/Examples/Feedback/: ExpDrawer.qml  ExpMessage.qml  ExpModal.qml  ExpNotification.qml  ExpPopconfirm.qml  ExpPopover.qml  ExpProgress.qml  ExpSpin.qml  ExpWatermark.qml
gallery/qml/Examples/Functions/: ExpApi.qml
gallery/qml/Home/: AboutPage.qml  CreatorPage.qml  HomePage.qml  OverviewPage.qml  SettingsPage.qml
(+271 files in other folders)
